--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,11 +68,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Checkout
+      run: cd gke
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        cli_config_credentials_token: ${{ secrets.SA_GURU }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
