--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,9 +68,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Checkout
+    - name: hej
       uses: actions/checkout@v3
       run: cd gke ; ls -al
+
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
